--- a/resources/assets/styles/blocks/block-video-1.scss
+++ b/resources/assets/styles/blocks/block-video-1.scss
@@ -16,7 +16,7 @@
     color: $white;
     position: relative;
     overflow: hidden;
-    min-height: 70vh;
+    min-height: $banner-height-desktop;
 
     &__bg {
       position: absolute;
