--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -84,6 +84,8 @@ $hamburger-dark: $primary;
 
 // layout
 $blog-container-width: 900px;
+$banner-height-desktop: 70vh;
+$banner-height-mobile: 60vh;
 
 // Logo height
 $logo-height: 80px;
