--- a/resources/assets/styles/blocks/block-banner-basic.scss
+++ b/resources/assets/styles/blocks/block-banner-basic.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   &__banner {
-    min-height: 90vh;
+    min-height: $banner-height-mobile;
     background-color: $overlay-background-color;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     align-items: center;
 
     @include xl-up {
-      min-height: 90vh;
+      min-height: $banner-height-desktop;
     }
   }
 
