--- a/resources/assets/styles/blocks/block-gallery-tabs-1.scss
+++ b/resources/assets/styles/blocks/block-gallery-tabs-1.scss
@@ -151,6 +151,7 @@
   .section-header {
     color: $primary;
     text-align: center;
+    font-family: $heading-font-family;
   }
 
   @media (max-width: 320px) {
