--- a/resources/assets/styles/blocks/block-map-split-1.scss
+++ b/resources/assets/styles/blocks/block-map-split-1.scss
@@ -75,6 +75,7 @@
       font-size: $font-size-44;
       margin-bottom: 20px;
       text-align: center;
+      font-family: $heading-font-family;
     }
 
     @include small-up {
