--- a/resources/assets/styles/blocks/block-banner-basic.scss
+++ b/resources/assets/styles/blocks/block-banner-basic.scss
@@ -27,16 +27,13 @@
 
     h1,
     h2 {
-      font-size: 3em;
+      font-size: $banner-h1-size-mobile;
+      font-family: $heading-font-family;
       line-height: initial;
       padding: 0;
 
-      @include small-up {
-        font-size: 2.5em;
-      }
-
-      @include xl-up {
-        font-size: 4em;
+      @include large-up {
+        font-size: $banner-h1-size-desktop;
       }
     }
 
