--- a/resources/assets/styles/layouts/_blog.scss
+++ b/resources/assets/styles/layouts/_blog.scss
@@ -69,6 +69,7 @@
 
     h2 {
       font-size: $font-size-44;
+      font-family: $heading-font-family;
       line-height: 50px;
       margin-bottom: 10px;
     }
@@ -157,7 +158,7 @@
   }
 
   article h2 {
-    font-size: $font-size-22;
+    font-size: $font-size-28;
     line-height: initial;
   }
 }
