CTA block CSS tweak

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $primary:             #2caeba;
-$gray-dark:           #102a42;
+$gray-dark:           #3a3b3c;
 $gray-light:          #d3d3d3;
 $ghost-white:         #f8f8ff;
 $white:               #fff;
