--- a/resources/assets/styles/blocks/block-cta-1.scss
+++ b/resources/assets/styles/blocks/block-cta-1.scss
@@ -62,17 +62,6 @@
     }
   }
 
-  .btn {
-    background-color: $white;
-    color: $black;
-    border-color: $white;
-
-    &:hover {
-      background-color: $white;
-      text-decoration: none;
-    }
-  }
-
   &.section-dark {
     background-color: $black;
     color: $white;
@@ -86,7 +75,8 @@
       color: $black;
 
       &:hover {
-        background-color: $white;
+        background-color: $primary;
+        border-color: $white;
       }
     }
   }
