--- a/resources/assets/styles/blocks/block-wysiwyg.scss
+++ b/resources/assets/styles/blocks/block-wysiwyg.scss
@@ -8,20 +8,48 @@
   }
 
   &__content {
-    h2,
-    h3 {
+    h1 {
       font-size: $font-size-28;
       line-height: inherit;
-      margin-bottom: 20px;
+      margin: 20px 0;
 
       @include small-up {
+        margin: 25px 0;
+      }
+
+      @include medium-up {
         font-size: $font-size-44;
         line-height: 50px;
       }
     }
 
-    p {
-      margin-bottom: 10px;
+    h2 {
+      font-size: $font-size-22;
+      line-height: inherit;
+      margin: 20px 0;
+
+      @include small-up {
+        margin: 20px 0;
+      }
+
+      @include medium-up {
+        font-size: $font-size-28;
+        line-height: 30px;
+      }
+    }
+
+    h3 {
+      font-size: $font-size-18;
+      line-height: inherit;
+      margin: 10px 0;
+
+      @include small-up {
+        margin: 0 0 15px;
+      }
+
+      @include medium-up {
+        font-size: $font-size-22;
+      }
     }
   }
 
