new blocks nd update footer

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -36,8 +36,13 @@ $ff-secondary: "EB Garamond", serif;
 $font-size-base: 1rem;
 $font-color: $gray-dark;
 $letter-spacing: 0.2rem;
+$font-size-160: $font-size-base * 10; // ~160px
+$font-size-80: $font-size-base * 5; // ~80px
+$font-size-71: $font-size-base * 4.4375; // ~71px
+$font-size-60: $font-size-base * 3.75; // ~60px
 $font-size-52: $font-size-base * 3.25; // ~52px
 $font-size-44: $font-size-base * 2.75; // ~44px
+$font-size-40: $font-size-base * 2.5; // ~40px
 $font-size-28: $font-size-base * 1.75; // ~28px
 $font-size-22: $font-size-base * 1.375; // ~22px
 $font-size-18: $font-size-base * 1.125; // ~18px
