--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -68,3 +68,5 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-slider-testimonials-1";
 @import "blocks/block-wysiwyg";
 @import "blocks/block-banner-basic";
+@import "blocks/block-single-testimonial-parallax";
+@import "blocks/block-image-split";
