--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -61,3 +61,5 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-slider-testimonials-1";
 @import "blocks/block-wysiwyg";
 @import "blocks/block-banner-basic";
+@import "blocks/block-single-testimonial-parallax";
+@import "blocks/block-image-split";
