--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,5 +1,6 @@
 .container {
-  max-width: 1190px;
+  // max-width: 1190px;
+  max-width: 1450px;
   margin: 0 auto;
   padding: 0 10px * 1.5;
   overflow: visible;
