--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -71,6 +71,7 @@ $bp-small: "640px";
 $bp-medium: "998px";
 $bp-large: "1024px";
 $bp-xl: "1280px";
+$bp-1xl: "1385px";
 $bp-2xl: "1536px";
 
 // wp classes margin spacer
@@ -108,4 +109,4 @@ $logo-height: 80px;
 $footer-fonts-color: $body-text-color;
 $footer-fonts-size: $font-size-base * 0.75; // ~12px
 $footer-line-height: 15px;
-$footer-font-size: $font-size-12;
+$footer-font-size: $font-size-15;
