--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -1,111 +1,486 @@
-.footer-info {
-  width: 100%;
-  background-color: $primary;
+// .footer-info {
+//   width: 100%;
+//   background-color: $primary;
 
-  // &__inner {
-  //   gap: 10px;
-  //   text-align: center;
-  //   padding: 20px 0;
+//   // &__inner {
+//   //   gap: 10px;
+//   //   text-align: center;
+//   //   padding: 20px 0;
 
-  //   @include small-up {
-  //     display: flex;
-  //     justify-content: space-between;
-  //     flex-wrap: wrap;
-  //     text-align: left;
-  //     align-items: center;
-  //     min-height: 180px;
-  //     width: 100%;
-  //     gap: 30px;
-  //     padding: 0 20px;
-  //   }
-  // }
-  &__info {
-    font-size: $footer-font-size;
-    line-height: 20px;
+//   //   @include small-up {
+//   //     display: flex;
+//   //     justify-content: space-between;
+//   //     flex-wrap: wrap;
+//   //     text-align: left;
+//   //     align-items: center;
+//   //     min-height: 180px;
+//   //     width: 100%;
+//   //     gap: 30px;
+//   //     padding: 0 20px;
+//   //   }
+//   // }
+//   &__info {
+//     font-size: $footer-font-size;
+//     line-height: 20px;
+//   }
+
+//   .grid {
+//     grid-template-columns: 1fr 1fr 1fr 1fr;
+//   }
+
+//   &__menu,
+//   &__contact {
+//     ul li {
+//       font-size: $footer-font-size;
+//       line-height: 20px;
+
+//       a {
+//         color: $link;
+
+//         &:hover {
+//           color: $link-hover;
+//         }
+//       }
+//     }
+//   }
+
+//   &__social {
+//     margin: auto auto 20px;
+
+//     @include small-up {
+//       margin: auto;
+//     }
+//   }
+
+//   &__contact {
+//     margin: auto auto 20px;
+
+//     ul li,
+//     h5 {
+//       font-size: $footer-font-size;
+//       color: $body-text-color;
+//       line-height: 15px;
+//     }
+
+//     h5 {
+//       font-weight: normal;
+//       text-transform: uppercase;
+//       margin-bottom: 5px;
+
+//       @include small-up {
+//         margin: auto;
+//       }
+//     }
+
+//     @include small-up {
+//       margin: auto;
+//     }
+//   }
+
+//   &__logo {
+//     img {
+//       max-width: 100px;
+//       height: auto;
+//       margin: auto auto 20px;
+
+//       @include small-up {
+//         margin: auto;
+//       }
+//     }
+//   }
+// }
+
+// footer {
+//   .widget {
+//     margin: auto auto 20px;
+
+//     @include small-up {
+//       margin: auto;
+//     }
+//   }
+
+//   .social {
+//     &__icon {
+//       font-size: $footer-font-size;
+//     }
+
+//     &__text {
+//       font-size: $footer-font-size;
+//     }
+//   }
+// }
+
+// .sub-footer {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   font-size: 12px;
+//   padding: 10px;
+//   gap: 0;
+
+//   @include small-up {
+//     flex-direction: row;
+
+//     #menu-sub-footer a::after,
+//     #menu-sub-footer li:first-child a::before {
+//       content: "|";
+//       padding: 0 10px;
+//     }
+//   }
+
+//   div {
+//     text-align: center;
+//   }
+
+//   .widget {
+//     margin: auto;
+//   }
+
+//   ul {
+//     display: flex;
+
+//     li {
+//       margin: auto 5px;
+
+//       @include small-up {
+//         margin: auto;
+//       }
+//     }
+//   }
+// }
+
+.copyright-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  padding: 10px;
+  gap: 0;
+
+  @include small-up {
+    flex-direction: row;
+
+    #menu-sub-footer a::after,
+    #menu-sub-footer li:first-child a::before {
+      content: "|";
+      padding: 0 10px;
+    }
   }
 
-  .grid {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+  div {
+    text-align: center;
+  }
+
+  .widget {
+    margin: auto;
+  }
+
+  ul {
+    display: flex;
+
+    li {
+      margin: auto 5px;
+
+      @include small-up {
+        margin: auto;
+      }
+
+      a {
+        color: initial !important;
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+.footer-info {
+  background-color: $primary;
+
+  &__container {
+    max-width: 1280px;
+    width: 95%;
+  }
+
+  &__inner {
+    display: grid;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    min-height: 180px;
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    grid-template-columns: 2fr;
+
+    @include small-up {
+      grid-template-columns: 2fr 2fr;
+    }
+
+    @include mxl-up {
+      grid-template-columns: 2fr 2fr 2fr 2fr;
+      gap: 30px;
+      align-items: flex-start;
+    }
+  }
+
+  &--row,
+  .widget_nav_menu {
+    align-self: self-start;
+
+    @include small-up {
+      margin: 0 auto;
+    }
+  }
+
+  .contact-form-widget {
+    @include small-up {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
+
+    // @include large-up {
+    //   grid-column-start: 1;
+    //   grid-column-end: 3;
+    //   grid-row-start: 2;
+    //   grid-row-end: 3;
+    // }
+
+    @include mxl-up {
+      grid-column-start: 3;
+      grid-column-end: 4;
+      grid-row-start: 1;
+      grid-row-end: 2;
+    }
+  }
+
+  p {
+    color: white;
+    font-size: $footer-font-size;
   }
 
   &__menu,
   &__contact {
     ul li {
       font-size: $footer-font-size;
-      line-height: 20px;
+      line-height: 14px;
+      margin-bottom: 20px;
 
       a {
-        color: $link;
-
-        &:hover {
-          color: $link-hover;
-        }
+        color: $white;
       }
     }
   }
 
-  &__social {
-    margin: auto auto 20px;
-
-    @include small-up {
-      margin: auto;
-    }
-  }
-
   &__contact {
-    margin: auto auto 20px;
+    max-width: 280px;
 
     ul li,
     h5 {
-      font-size: $footer-font-size;
-      color: $body-text-color;
+      // font-size: 10px;
+      color: $black;
       line-height: 15px;
     }
 
     h5 {
       font-weight: normal;
       text-transform: uppercase;
-      margin-bottom: 5px;
+    }
+  }
 
-      @include small-up {
-        margin: auto;
+  h3 {
+    color: $white;
+    text-transform: uppercase;
+    font-size: $footer-font-size;
+    position: relative;
+    margin-bottom: 40px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: $blue-dark;
+      width: 30px;
+      height: 2px;
+      top: 30px;
+      bottom: 0;
+      left: 0;
+    }
+  }
+
+  .widget_nav_menu h3::before {
+    background-color: $blue-dark;
+  }
+
+  .contact-widget::before {
+    background-color: $blue-dark;
+  }
+
+  &--brand {
+    &__address {
+      margin: 5px 0;
+      width: 299px !important;
+
+      &--link {
+        color: $white;
+      }
+
+      .social__icon {
+        margin-right: 5px;
       }
     }
 
-    @include small-up {
-      margin: auto;
+    &__text {
+      margin: 30px 0;
     }
   }
 
   &__logo {
     img {
-      max-width: 100px;
+      width: auto;
       height: auto;
-      margin: auto auto 20px;
+    }
 
-      @include small-up {
-        margin: auto;
+    p {
+      width: 270px;
+    }
+  }
+
+  .widget_nav_menu h3 {
+    display: none;
+
+    @include small-up {
+      visibility: hidden;
+      display: block;
+    }
+  }
+
+  .widget_nav_menu:first-child h3 {
+    visibility: visible;
+  }
+
+  &__instagram {
+    .heading-instagram {
+      margin-bottom: 28px;
+    }
+
+    .sb_instagram_header {
+      display: none;
+    }
+
+    #sb_instagram {
+      #sbi_load .sbi_load_btn {
+        display: none;
+      }
+
+      .sbi_follow_btn.sbi_custom a {
+        background-color: $blue-dark !important;
+
+        &:hover {
+          box-shadow: 0 0.5em 0.5em -0.4em $primary;
+        }
       }
     }
   }
-}
 
-footer {
-  .widget {
-    margin: auto auto 20px;
+  &__sidebar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
 
-    @include small-up {
-      margin: auto;
+    // display: flex;
+    // padding-bottom: 24px;
+    // justify-content: space-around;
+    // width: 100%;
+    // max-width: 500px;
+    // margin: 0 auto;
+
+    .widget_nav_menu {
+      padding-top: 68px;
+
+      @include small-up {
+        padding-top: 0;
+      }
+    }
+
+    @include mxl-up {
+      max-width: 100%;
     }
   }
 
-  .social {
-    &__icon {
-      font-size: $footer-font-size;
+  .wpcf7-spinner {
+    display: none;
+  }
+
+  .last-col {
+    @include small-up {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 3;
+      grid-row-end: 4;
     }
 
-    &__text {
+    @include mxl-up {
+      grid-column-start: 4;
+      grid-column-end: 4;
+      grid-row-start: 1;
+      grid-row-end: 2;
+    }
+  }
+
+  .sign-up-form {
+    max-width: 320px;
+    margin: 0 auto;
+
+    @include mxl-up {
+      max-width: 100%;
+    }
+
+    label {
       font-size: $footer-font-size;
+      color: $white;
+      margin-bottom: 2px;
+    }
+  }
+
+  .newsletter__label--email {
+    input {
+      background-color: $white;
+      border-radius: 5px;
+      min-height: 40px;
+      width: 78%;
+      border: 1px solid $white;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      padding: 5px 15px;
+      color: $white;
+      font-family: "Poppins", sans-serif;
+      margin-right: 2%;
+    }
+  }
+
+  .newsletter__label--submit-contact {
+    input {
+      background-color: $white;
+      height: 40px;
+      width: 20%;
+      cursor: pointer;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      border: 1px solid $white;
+      color: $blue-dark;
+      padding: 0;
+
+      &:focus {
+        outline: 1px solid rgba(255, 255, 255, 1);
+      }
     }
   }
 }
@@ -148,4 +523,8 @@ footer {
       }
     }
   }
+}
+
+.copyright-footer .footer-info__menu ul li {
+  margin-bottom: 0 !important;
 }
