--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -47,7 +47,9 @@ $font-size-28: $font-size-base * 1.75; // ~28px
 $font-size-22: $font-size-base * 1.375; // ~22px
 $font-size-18: $font-size-base * 1.125; // ~18px
 $font-size-15: $font-size-base * 0.9375; // ~15px
+$font-size-14: $font-size-base * 0.875; // ~14px
 $font-size-12: $font-size-base * 0.75; // ~12px
+$font-size-10: $font-size-base * 0.625; // ~10px
 
 // transitions
 $transition: all 0.3s linear;
@@ -109,4 +111,4 @@ $logo-height: 80px;
 $footer-fonts-color: $body-text-color;
 $footer-fonts-size: $font-size-base * 0.75; // ~12px
 $footer-line-height: 15px;
-$footer-font-size: $font-size-15;
+$footer-font-size: $font-size-14;
