--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -1,155 +1,3 @@
-// .footer-info {
-//   width: 100%;
-//   background-color: $primary;
-
-//   // &__inner {
-//   //   gap: 10px;
-//   //   text-align: center;
-//   //   padding: 20px 0;
-
-//   //   @include small-up {
-//   //     display: flex;
-//   //     justify-content: space-between;
-//   //     flex-wrap: wrap;
-//   //     text-align: left;
-//   //     align-items: center;
-//   //     min-height: 180px;
-//   //     width: 100%;
-//   //     gap: 30px;
-//   //     padding: 0 20px;
-//   //   }
-//   // }
-//   &__info {
-//     font-size: $footer-font-size;
-//     line-height: 20px;
-//   }
-
-//   .grid {
-//     grid-template-columns: 1fr 1fr 1fr 1fr;
-//   }
-
-//   &__menu,
-//   &__contact {
-//     ul li {
-//       font-size: $footer-font-size;
-//       line-height: 20px;
-
-//       a {
-//         color: $link;
-
-//         &:hover {
-//           color: $link-hover;
-//         }
-//       }
-//     }
-//   }
-
-//   &__social {
-//     margin: auto auto 20px;
-
-//     @include small-up {
-//       margin: auto;
-//     }
-//   }
-
-//   &__contact {
-//     margin: auto auto 20px;
-
-//     ul li,
-//     h5 {
-//       font-size: $footer-font-size;
-//       color: $body-text-color;
-//       line-height: 15px;
-//     }
-
-//     h5 {
-//       font-weight: normal;
-//       text-transform: uppercase;
-//       margin-bottom: 5px;
-
-//       @include small-up {
-//         margin: auto;
-//       }
-//     }
-
-//     @include small-up {
-//       margin: auto;
-//     }
-//   }
-
-//   &__logo {
-//     img {
-//       max-width: 100px;
-//       height: auto;
-//       margin: auto auto 20px;
-
-//       @include small-up {
-//         margin: auto;
-//       }
-//     }
-//   }
-// }
-
-// footer {
-//   .widget {
-//     margin: auto auto 20px;
-
-//     @include small-up {
-//       margin: auto;
-//     }
-//   }
-
-//   .social {
-//     &__icon {
-//       font-size: $footer-font-size;
-//     }
-
-//     &__text {
-//       font-size: $footer-font-size;
-//     }
-//   }
-// }
-
-// .sub-footer {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   font-size: 12px;
-//   padding: 10px;
-//   gap: 0;
-
-//   @include small-up {
-//     flex-direction: row;
-
-//     #menu-sub-footer a::after,
-//     #menu-sub-footer li:first-child a::before {
-//       content: "|";
-//       padding: 0 10px;
-//     }
-//   }
-
-//   div {
-//     text-align: center;
-//   }
-
-//   .widget {
-//     margin: auto;
-//   }
-
-//   ul {
-//     display: flex;
-
-//     li {
-//       margin: auto 5px;
-
-//       @include small-up {
-//         margin: auto;
-//       }
-//     }
-//   }
-// }
-
 .copyright-footer {
   display: flex;
   flex-direction: column;
@@ -188,7 +36,7 @@
       }
 
       a {
-        color: initial !important;
+        color: $body-text-color !important;
         font-size: 12px;
       }
     }
@@ -226,14 +74,10 @@
     }
   }
 
-  &--row,
-  .widget_nav_menu {
-    align-self: self-start;
-
-    @include small-up {
-      margin: 0 auto;
-    }
-  }
+  // &--row,
+  // .widget_nav_menu {
+  //   align-self: self-start;
+  // }
 
   .contact-form-widget {
     @include small-up {
@@ -341,7 +185,7 @@
   &__logo {
     img {
       width: auto;
-      height: auto;
+      height: 100px;
     }
 
     p {
@@ -466,7 +310,7 @@
 
   .newsletter__label--submit-contact {
     input {
-      background-color: $white;
+      background-color: $blue-dark;
       height: 40px;
       width: 20%;
       cursor: pointer;
@@ -474,12 +318,16 @@
       border-bottom-right-radius: 5px;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border: 1px solid $white;
-      color: $blue-dark;
+      border: 1px solid $blue-dark;
+      color: $white;
       padding: 0;
 
       &:focus {
         outline: 1px solid rgba(255, 255, 255, 1);
+      }
+
+      &:hover {
+        color: $black;
       }
     }
   }
