--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -63,3 +63,5 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-banner-basic";
 @import "blocks/block-single-testimonial-parallax";
 @import "blocks/block-image-split";
+@import "blocks/block-slider-tabs";
+@import "blocks/block-gallery-things-to-do";
