New contact block copied from contact template

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -71,3 +71,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-image-3x-split";
 @import "blocks/block-slider-tabs";
 @import "blocks/block-gallery-things-to-do";
+@import "blocks/block-contact-details-with-forms";
