--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -64,3 +64,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-image-3x-split";
 @import "blocks/block-slider-tabs";
 @import "blocks/block-gallery-things-to-do";
+@import "blocks/block-contact-details-with-forms";
