--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -65,3 +65,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-slider-tabs";
 @import "blocks/block-gallery-things-to-do";
 @import "blocks/block-contact-details-with-forms";
+@import "blocks/block-our-services";
