--- a/resources/assets/styles/blocks/block-banner-slider-bg-image.scss
+++ b/resources/assets/styles/blocks/block-banner-slider-bg-image.scss
@@ -1,4 +1,4 @@
-.block-slider {
+.block-banner-slider-bg-image {
   &__banner {
     min-height: calc(100vh - 150px);
     background-color: rgba(0, 0, 0, 0.3);
