--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -50,7 +50,7 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-banner-image";
 @import "blocks/block-gallery-1";
 @import "blocks/block-banner-video-1";
-@import "blocks/block-slider-1";
+@import "blocks/block-banner-slider-bg-image";
 @import "blocks/block-image-icons-split";
 @import "blocks/block-4-column-image-text";
 @import "blocks/block-image-split-repeater";
