--- a/resources/assets/styles/layouts/_pages.scss
+++ b/resources/assets/styles/layouts/_pages.scss
@@ -88,3 +88,9 @@
   background-color: $ghost-white;
   padding: 60px;
 }
+
+.headline-icon {
+  width: 70px !important;
+  height: auto !important;
+  padding: 15px 0;
+}
