--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -73,3 +73,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-gallery-things-to-do";
 @import "blocks/block-contact-details-with-forms";
 @import "blocks/block-our-services";
+@import "blocks/block-cpt-rooms-slider";
