--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin small-plus {
+  @media (min-width: #{$bp-smallplus}) {
+    @content;
+  }
+}
+
 @mixin medium-up {
   @media (min-width: #{$bp-medium}) {
     @content;
