--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -70,6 +70,7 @@ $box-shadow-light: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.
 $bp-xxsmall: "320px";
 $bp-xsmall: "480px";
 $bp-small: "640px";
+$bp-smallplus: "768px";
 $bp-medium: "998px";
 $bp-large: "1024px";
 $bp-xl: "1280px";
