--- a/resources/assets/styles/blocks/block-image-wysiwyg.scss
+++ b/resources/assets/styles/blocks/block-image-wysiwyg.scss
@@ -10,6 +10,11 @@
   &__content {
     text-align: center;
 
+    @include medium-up {
+      width: 70%;
+      margin: auto;
+    }
+
     h1 {
       font-size: $font-size-28;
       line-height: inherit;
