--- a/resources/assets/styles/blocks/block-cta-1.scss
+++ b/resources/assets/styles/blocks/block-cta-1.scss
@@ -90,4 +90,13 @@
       text-shadow: 2px 2px $black;
     }
   }
+
+  &.section-light {
+    background-color: $white;
+    color: $black;
+
+    h3 {
+      color: $black;
+    }
+  }
 }
