slick filter slider and map split 2

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -10,6 +10,8 @@ $blue-dark:           #173c5e;
 $green-light:         #1c6061;
 $gold:                #d7bd70;
 $secondary:           $ghost-white;
+$brown-light:         #eae3cf;
+$brown-medium:        #b6a58b;
 
 // link color
 $link:                $blue-dark;
