--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -62,6 +62,7 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-gallery-tabs-1";
 @import "blocks/block-image-wysiwyg";
 @import "blocks/block-map-split-1";
+@import "blocks/block-map-split-2";
 @import "blocks/block-offers-1";
 @import "blocks/block-rooms-1";
 @import "blocks/block-slider-split-1";
@@ -75,3 +76,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-our-services-options";
 @import "blocks/block-cpt-rooms-slider";
 @import "blocks/block-our-services-single";
+@import "blocks/block-slider-filter-items";
