--- a/resources/assets/styles/blocks/block-map-split-2.scss
+++ b/resources/assets/styles/blocks/block-map-split-2.scss
@@ -27,6 +27,16 @@
         grid-template-columns: 1fr 1fr;
       }
     }
+
+    &.right {
+      .map-wrapper {
+        order: 2;
+      }
+
+      .form-wrapper {
+        order: 1;
+      }
+    }
   }
 
   .info-cont {
