--- a/resources/assets/styles/blocks/block-slider-split-1.scss
+++ b/resources/assets/styles/blocks/block-slider-split-1.scss
@@ -235,14 +235,22 @@
     }
   }
 
-  &.section-flip .grid__outer {
+  &.gallery-left .grid__outer {
+    article:nth-of-type(1) {
+      order: 2;
+    }
+
+    article:nth-of-type(2) {
+      order: 1;
+    }
+
     @include medium-down {
       article:nth-of-type(1) {
-        order: 2;
+        order: 1;
       }
 
       article:nth-of-type(2) {
-        order: 1;
+        order: 2;
       }
     }
   }
