image grid split block

--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -70,3 +70,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-cpt-rooms-slider";
 @import "blocks/block-our-services-single";
 @import "blocks/block-slider-filter-items";
+@import "blocks/block-image-grid-split";
